--- a/list.html
+++ b/list.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
+<head>
+  <meta charset="utf-8">
 
-    <title>List of Things</title>
-    <link rel="stylesheet" href="css/master.css">
-    <script src="js/app.js">  </script>
-  </head>
-  <body>
+  <title>List of Things</title>
+  <link rel="stylesheet" href="css/master.css">
+  <script src="js/app.js">  </script>
+</head>
+<body>
+  <header>
+    This is the Header
+  </header>
 
-    <form id="form-outer" action="index.html" method="post">
+  <form id="form-outer" action="index.html" method="post">
 
-      <label for="name" class="name">Name</label>
-      <input type="text" id="name" />
+    <label for="name" class="name">Name</label>
+    <input type="text" id="name" />
 
-      <label for="position" >Position</label>
-      <input type="text" id="position" />
+    <!-- <label for="position" >Position</label>
+    <input type="text" id="position" /> -->
 
-      <label for="batting-average" >Batting Average</label>
-      <input type="text" id="average" />
+    <label for="batting-average" >Batting Average</label>
+    <input type="text" id="average" />
 
-      <input type="submit" name="" value="add to list">
 
-    </form>
+    <div class="form-radios">
+      <input type="radio" id="batter" name="position" value="batter">
+      <label for="batter">Batter</label>
+      <input type="radio" id="bowler" name="Position" value="bowler">
+      <label for="bowler">Bowler</label>
+    </div>
 
-    <button id="delete-all">Remove All Cricketers </button>
+
+    <input type="submit" name="" value="add to list">
+
+  </form>
+
+  <button id="delete-all">Remove All Cricketers </button>
+
+  <div class="list-background">
 
     <h1>The list of things:</h1>
 
@@ -33,6 +47,8 @@
 
     </div>
 
+  </div>
+</body>
 
-  </body>
+<footer> This is the footer</footer>
 </html>
