--- a/list.html
+++ b/list.html
@@ -20,10 +20,6 @@
     <!-- <label for="position" >Position</label>
     <input type="text" id="position" /> -->
 
-    <label for="batting-average" >Batting Average</label>
-    <input type="text" id="average" />
-
-
     <div class="form-radios">
       <input type="radio" id="batter" name="position" value="batter">
       <label for="batter">Batter</label>
@@ -31,12 +27,15 @@
       <label for="bowler">Bowler</label>
     </div>
 
+    <label for="batting-average" >Batting Average</label>
+    <input type="number" step="0.1" id="average" value="0.0"  placeholder="0.0" />
+
 
     <input type="submit" name="" value="add to list">
 
   </form>
 
-  <button id="delete-all">Remove All Cricketers </button>
+
 
   <div class="list-background">
 
@@ -48,7 +47,7 @@
     </div>
 
   </div>
+  <footer> <button id="delete-all">Remove All Cricketers </button> </footer>
 </body>
 
-<footer> This is the footer</footer>
 </html>
