added batting average function

--- a/list.html
+++ b/list.html
@@ -27,8 +27,11 @@
       <label for="bowler">Bowler</label>
     </div>
 
-    <label for="batting-average" >Batting Average</label>
-    <input type="number" step="0.1" id="average" value="0.0"  placeholder="0.0" />
+    <label for="runs" >Number of Runs</label>
+    <input type="number" id="runs" value="0.0"  placeholder="0.0" />
+
+    <label for="matches" >Number of Matches</label>
+    <input type="number" id="matches" value="0.0"  placeholder="0.0" />
 
 
     <input type="submit" name="" value="add to list">
