--- a/list.html
+++ b/list.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
 
-  <title>List of Things</title>
+  <title>CricketLstr</title>
   <link rel="stylesheet" href="css/master.css">
   <script src="js/app.js">  </script>
 </head>
 <body>
   <header>
-    This is the Header
+    CricketLstr: Keeping a non-permanent list of cricketers since 2018.
   </header>
 
   <form id="form-outer" action="index.html" method="post">
@@ -27,13 +27,20 @@
       <label for="bowler">Bowler</label>
     </div>
 
-    <label for="runs" >Number of Runs</label>
-    <input type="number" id="runs" value="0.0"  placeholder="0.0" />
+    <label for="matches" >Number of Matches Played</label>
+    <input type="number" id="matches" value="0"  placeholder="0" />
 
-    <label for="matches" >Number of Matches</label>
-    <input type="number" id="matches" value="0.0"  placeholder="0.0" />
+    <label for="runs" >Number of Runs Scored</label>
+    <input type="number" id="runs" value="0"  placeholder="0" />
 
+    <br>
+    <label for="conceded" >Number of Runs Conceded</label>
+    <input type="number" id="conceded" value="0"  placeholder="0" />
 
+    <label for="wickets" >Number of Wickets Taken</label>
+    <input type="number" id="wickets" value="0"  placeholder="0" />
+
+    <br>
     <input type="submit" name="" value="add to list">
 
   </form>
@@ -42,7 +49,7 @@
 
   <div class="list-background">
 
-    <h1>The list of things:</h1>
+    <h1>Cricketers:</h1>
 
 
     <div id="list-of-things">
