fixed averages number to account for NaN. changed buttons

--- a/list.html
+++ b/list.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
 
-  <title>CricketLstr</title>
+  <title>CrickLstr</title>
   <link rel="stylesheet" href="css/master.css">
   <script src="js/app.js">  </script>
 </head>
 <body>
   <header>
-    CricketLstr: Keeping a non-permanent list of cricketers since 2018.
+    CrickLstr: Keeping a non-permanent list of cricketers since 2018.
   </header>
 
   <form id="form-outer" action="index.html" method="post">
@@ -41,7 +41,7 @@
     <input type="number" id="wickets" value="0"  placeholder="0" />
 
     <br>
-    <input type="submit" name="" value="add to list">
+    <input type="submit" name="form-submit" id="form-submit" value="add to list">
 
   </form>
 
