--- a/list.html
+++ b/list.html
@@ -12,7 +12,7 @@
     CrickLstr: Keeping a non-permanent list of cricketers since 2018.
   </header>
 
-  <form id="form-outer" action="index.html" method="post">
+  <form id="new-cricketer-form" action="index.html" method="post">
 
     <label for="name" class="name">Name</label>
     <input type="text" id="name" />
