minor CSS colour changes

--- a/list.html
+++ b/list.html
@@ -27,7 +27,7 @@
       <label for="bowler">Bowler</label>
     </div>
 
-    <label for="matches" >Number of Matches Played</label>
+    <label for="matches" >Number of Innings Played</label>
     <input type="number" id="matches" value="1"  placeholder="1" />
 
     <label for="runs" >Number of Runs Scored</label>
