added 'delete one' button

--- a/list.html
+++ b/list.html
@@ -45,8 +45,6 @@
 
   </form>
 
-
-
   <div class="list-background">
 
     <h1>Cricketers:</h1>
@@ -59,7 +57,10 @@
 
 
   </div>
-  <footer> <button id="delete-all">Remove All Cricketers </button> </footer>
+  <footer>
+    <button id="delete-all">Remove All Cricketers </button>
+    <button id="delete-one">Remove Last Cricketer </button>
+  </footer>
 </body>
 
 </html>
